k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mesa
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    app.kubernetes.io/part-of: mesa-conecta-game
